@@ -1,15 +1,13 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
-
-FROM openjdk:8-jre-slim
+FROM python:3.12-slim
 
 EXPOSE 8080
 
-RUN mkdir /app
+COPY app /zadanie/app
+COPY alembic.ini /zadanie
+COPY alembic /zadanie/alembic
+COPY requirements.txt /zadanie
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+WORKDIR /zadanie
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
-
+RUN apt-get update && apt-get upgrade && pip install --no-cache-dir --upgrade -r requirements.txt
+ENTRYPOINT ["bash", "-c", "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8080"]
